src/objects/Contact_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contact_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Contact_Opportunities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Evaluator</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Negative Influencer</fullName>
                </value>
                <value>
                    <fullName>Business User</fullName>
                    <isActive>false</isActive>
                    <label>Business User</label>
                </value>
                <value>
                    <fullName>Economic Buyer</fullName>
                    <isActive>false</isActive>
                    <label>Economic Buyer</label>
                </value>
                <value>
                    <fullName>Economic Decision Maker</fullName>
                    <isActive>false</isActive>
                    <label>Economic Decision Maker</label>
                </value>
                <value>
                    <fullName>Executive Sponsor</fullName>
                    <isActive>false</isActive>
                    <label>Executive Sponsor</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Technical Buyer</fullName>
                    <isActive>false</isActive>
                    <label>Technical Buyer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Opportunity Contact</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Contact Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>